--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="NoteRain - Free piano learning app with Synthesia-style falling notes. Import MIDI files, practice piano with sheet music visualization, and improve your keyboard skills." />
+    <meta name="keywords" content="piano, piano practice, piano learning, synthesia, midi, midi player, sheet music, piano tutorial, falling notes, keyboard practice, learn piano, piano app, music education, piano trainer" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="canonical" href="https://noterain.app" />
     <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <title>NoteRain</title>
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="NoteRain - Free Synthesia-Style Piano Learning App" />
+    <meta property="og:description" content="Learn piano with falling notes visualization. Import MIDI files, practice with sheet music, and master your favorite songs." />
+    <meta property="og:image" content="https://noterain.app/logo.png" />
+    <meta property="og:url" content="https://noterain.app" />
+    <meta property="og:site_name" content="NoteRain" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="NoteRain - Free Synthesia-Style Piano Learning App" />
+    <meta name="twitter:description" content="Learn piano with falling notes visualization. Import MIDI files, practice with sheet music, and master your favorite songs." />
+    <meta name="twitter:image" content="https://noterain.app/logo.png" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "NoteRain",
+      "description": "Free Synthesia-style piano learning app with falling notes visualization. Import MIDI files, practice piano with sheet music, and improve your keyboard skills.",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Web Browser",
+      "keywords": "piano, piano practice, synthesia, midi, sheet music, piano tutorial, falling notes, learn piano",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
